--- a/flashcardblastcard/package.json
+++ b/flashcardblastcard/package.json
@@ -10,14 +10,15 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "test": "lab -a @hapi/code -L",
     "lint": "eslint ."
   },
   "dependencies": {
     "@hapi/boom": "9.x.x",
     "@hapipal/haute-couture": "4.x.x",
-    "joi": "17.x.x"
+    "joi": "17.x.x",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
