--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flashcard2",
   "version": "0.1.0",
   "private": true,
-  "asdfsdfhomepage":"http://tripdragon.github.io/flashcardblastcard/",
+  "homepage": "http://tripdragon.github.io/flashcardblastcard",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
